--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<version>3.0.6</version>
 		</dependency>
 		<!-- END cache dependency -->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
